nodejs/versioned_docs/version-1.20/api/class-elementhandle.mdx
---
id: class-elementhandle
title: "ElementHandle"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

* extends: [JSHandle]

ElementHandle represents an in-page DOM element. ElementHandles can be created with the [page.$(selector[, options])](./api/class-page.mdx#page-query-selector) method.

:::caution Discouraged
The use of ElementHandle is discouraged, use [Locator] objects and web-first assertions instead.
:::

```js
const hrefElement = await page.$('a');
await hrefElement.click();
```

ElementHandle prevents DOM element from garbage collection unless the handle is disposed with [jsHandle.dispose()](./api/class-jshandle.mdx#js-handle-dispose). ElementHandles are auto-disposed when their origin frame gets navigated.

ElementHandle instances can be used as an argument in [page.$eval(selector, pageFunction[, arg, options])](./api/class-page.mdx#page-eval-on-selector) and [page.evaluate(pageFunction[, arg])](./api/class-page.mdx#page-evaluate) methods.

The difference between the [Locator] and ElementHandle is that the ElementHandle points to a particular element, while [Locator] captures the logic of how to retrieve an element.

In the example below, handle points to a particular DOM element on page. If that element changes text or is used by React to render an entirely different component, handle is still pointing to that very DOM element. This can lead to unexpected behaviors.

```js
const handle = await page.$('text=Submit');
// ...
await handle.hover();
await handle.click();
```

With the locator, every time the `element` is used, up-to-date DOM element is located in the page using the selector. So in the snippet below, underlying DOM element is going to be located twice.

```js
const locator = page.locator('text=Submit');
// ...
await locator.hover();
await locator.click();
```


- [elementHandle.$(selector)](./api/class-elementhandle.mdx#element-handle-query-selector)
- [elementHandle.$$(selector)](./api/class-elementhandle.mdx#element-handle-query-selector-all)
- [elementHandle.$$eval(selector, pageFunction[, arg])](./api/class-elementhandle.mdx#element-handle-eval-on-selector-all)
- [elementHandle.$eval(selector, pageFunction[, arg])](./api/class-elementhandle.mdx#element-handle-eval-on-selector)
- [elementHandle.boundingBox()](./api/class-elementhandle.mdx#element-handle-bounding-box)
- [elementHandle.check([options])](./api/class-elementhandle.mdx#element-handle-check)
- [elementHandle.click([options])](./api/class-elementhandle.mdx#element-handle-click)
- [elementHandle.contentFrame()](./api/class-elementhandle.mdx#element-handle-content-frame)
- [elementHandle.dblclick([options])](./api/class-elementhandle.mdx#element-handle-dblclick)
- [elementHandle.dispatchEvent(type[, eventInit])](./api/class-elementhandle.mdx#element-handle-dispatch-event)
- [elementHandle.fill(value[, options])](./api/class-elementhandle.mdx#element-handle-fill)
- [elementHandle.focus()](./api/class-elementhandle.mdx#element-handle-focus)
- [elementHandle.getAttribute(name)](./api/class-elementhandle.mdx#element-handle-get-attribute)
- [elementHandle.hover([options])](./api/class-elementhandle.mdx#element-handle-hover)
- [elementHandle.innerHTML()](./api/class-elementhandle.mdx#element-handle-inner-html)
- [elementHandle.innerText()](./api/class-elementhandle.mdx#element-handle-inner-text)
- [elementHandle.inputValue([options])](./api/class-elementhandle.mdx#element-handle-input-value)
- [elementHandle.isChecked()](./api/class-elementhandle.mdx#element-handle-is-checked)
- [elementHandle.isDisabled()](./api/class-elementhandle.mdx#element-handle-is-disabled)
- [elementHandle.isEditable()](./api/class-elementhandle.mdx#element-handle-is-editable)
- [elementHandle.isEnabled()](./api/class-elementhandle.mdx#element-handle-is-enabled)
- [elementHandle.isHidden()](./api/class-elementhandle.mdx#element-handle-is-hidden)
- [elementHandle.isVisible()](./api/class-elementhandle.mdx#element-handle-is-visible)
- [elementHandle.ownerFrame()](./api/class-elementhandle.mdx#element-handle-owner-frame)
- [elementHandle.press(key[, options])](./api/class-elementhandle.mdx#element-handle-press)
- [elementHandle.screenshot([options])](./api/class-elementhandle.mdx#element-handle-screenshot)
- [elementHandle.scrollIntoViewIfNeeded([options])](./api/class-elementhandle.mdx#element-handle-scroll-into-view-if-needed)
- [elementHandle.selectOption(values[, options])](./api/class-elementhandle.mdx#element-handle-select-option)
- [elementHandle.selectText([options])](./api/class-elementhandle.mdx#element-handle-select-text)
- [elementHandle.setChecked(checked[, options])](./api/class-elementhandle.mdx#element-handle-set-checked)
- [elementHandle.setInputFiles(files[, options])](./api/class-elementhandle.mdx#element-handle-set-input-files)
- [elementHandle.tap([options])](./api/class-elementhandle.mdx#element-handle-tap)
- [elementHandle.textContent()](./api/class-elementhandle.mdx#element-handle-text-content)
- [elementHandle.type(text[, options])](./api/class-elementhandle.mdx#element-handle-type)
- [elementHandle.uncheck([options])](./api/class-elementhandle.mdx#element-handle-uncheck)
- [elementHandle.waitForElementState(state[, options])](./api/class-elementhandle.mdx#element-handle-wait-for-element-state)
- [elementHandle.waitForSelector(selector[, options])](./api/class-elementhandle.mdx#element-handle-wait-for-selector)
- [jsHandle.asElement()](./api/class-jshandle.mdx#js-handle-as-element)
- [jsHandle.dispose()](./api/class-jshandle.mdx#js-handle-dispose)
- [jsHandle.evaluate(pageFunction[, arg])](./api/class-jshandle.mdx#js-handle-evaluate)
- [jsHandle.evaluateHandle(pageFunction[, arg])](./api/class-jshandle.mdx#js-handle-evaluate-handle)
- [jsHandle.getProperties()](./api/class-jshandle.mdx#js-handle-get-properties)
- [jsHandle.getProperty(propertyName)](./api/class-jshandle.mdx#js-handle-get-property)
- [jsHandle.jsonValue()](./api/class-jshandle.mdx#js-handle-json-value)

## elementHandle.$(selector) {#element-handle-query-selector}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-query-selector-option-selector"/> &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.<a href="#element-handle-query-selector-option-selector" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-query-selector-return"/> &#60;[Promise]<[null]|[ElementHandle]>&#62;<a href="#element-handle-query-selector-return" class="list-anchor">#</a>

The method finds an element matching the specified selector in the `ElementHandle`'s subtree. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, returns `null`.

## elementHandle.$$(selector) {#element-handle-query-selector-all}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-query-selector-all-option-selector"/> &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.<a href="#element-handle-query-selector-all-option-selector" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-query-selector-all-return"/> &#60;[Promise]<[Array]<[ElementHandle]>>&#62;<a href="#element-handle-query-selector-all-return" class="list-anchor">#</a>

The method finds all elements matching the specified selector in the `ElementHandle`s subtree. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, returns empty array.

## elementHandle.$eval(selector, pageFunction[, arg]) {#element-handle-eval-on-selector}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-eval-on-selector-option-selector"/> &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.<a href="#element-handle-eval-on-selector-option-selector" class="list-anchor">#</a>
- `pageFunction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-eval-on-selector-option-expression"/> &#60;[function]\([Element]\)&#62; Function to be evaluated in the page context.<a href="#element-handle-eval-on-selector-option-expression" class="list-anchor">#</a>
- `arg`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-eval-on-selector-option-arg"/> &#60;[EvaluationArgument]&#62; Optional argument to pass to `pageFunction`.<a href="#element-handle-eval-on-selector-option-arg" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-eval-on-selector-return"/> &#60;[Promise]<[Serializable]>&#62;<a href="#element-handle-eval-on-selector-return" class="list-anchor">#</a>

Returns the return value of `pageFunction`.

The method finds an element matching the specified selector in the `ElementHandle`s subtree and passes it as a first argument to `pageFunction`. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, the method throws an error.

If `pageFunction` returns a [Promise], then [elementHandle.$eval(selector, pageFunction[, arg])](./api/class-elementhandle.mdx#element-handle-eval-on-selector) would wait for the promise to resolve and return its value.

Examples:

```js
const tweetHandle = await page.$('.tweet');
expect(await tweetHandle.$eval('.like', node => node.innerText)).toBe('100');
expect(await tweetHandle.$eval('.retweets', node => node.innerText)).toBe('10');
```

## elementHandle.$$eval(selector, pageFunction[, arg]) {#element-handle-eval-on-selector-all}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-eval-on-selector-all-option-selector"/> &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.<a href="#element-handle-eval-on-selector-all-option-selector" class="list-anchor">#</a>
- `pageFunction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-eval-on-selector-all-option-expression"/> &#60;[function]\([Array]<[Element]>\)&#62; Function to be evaluated in the page context.<a href="#element-handle-eval-on-selector-all-option-expression" class="list-anchor">#</a>
- `arg`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-eval-on-selector-all-option-arg"/> &#60;[EvaluationArgument]&#62; Optional argument to pass to `pageFunction`.<a href="#element-handle-eval-on-selector-all-option-arg" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-eval-on-selector-all-return"/> &#60;[Promise]<[Serializable]>&#62;<a href="#element-handle-eval-on-selector-all-return" class="list-anchor">#</a>

Returns the return value of `pageFunction`.

The method finds all elements matching the specified selector in the `ElementHandle`'s subtree and passes an array of matched elements as a first argument to `pageFunction`. See [Working with selectors](./selectors.mdx) for more details.

If `pageFunction` returns a [Promise], then [elementHandle.$$eval(selector, pageFunction[, arg])](./api/class-elementhandle.mdx#element-handle-eval-on-selector-all) would wait for the promise to resolve and return its value.

Examples:

```html
<div class="feed">
  <div class="tweet">Hello!</div>
  <div class="tweet">Hi!</div>
</div>
```

```js
const feedHandle = await page.$('.feed');
expect(await feedHandle.$$eval('.tweet', nodes => nodes.map(n => n.innerText))).toEqual(['Hello!', 'Hi!']);
```

## elementHandle.boundingBox() {#element-handle-bounding-box}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-bounding-box-return"/> &#60;[Promise]<[null]|[Object]>&#62;<a href="#element-handle-bounding-box-return" class="list-anchor">#</a>
  - `x` &#60;[number]&#62; the x coordinate of the element in pixels.
  - `y` &#60;[number]&#62; the y coordinate of the element in pixels.
  - `width` &#60;[number]&#62; the width of the element in pixels.
  - `height` &#60;[number]&#62; the height of the element in pixels.

This method returns the bounding box of the element, or `null` if the element is not visible. The bounding box is calculated relative to the main frame viewport - which is usually the same as the browser window.

Scrolling affects the returned bonding box, similarly to [Element.getBoundingClientRect](https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect). That means `x` and/or `y` may be negative.

Elements from child frames return the bounding box relative to the main frame, unlike the [Element.getBoundingClientRect](https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect).

Assuming the page is static, it is safe to use bounding box coordinates to perform input. For example, the following snippet should click the center of the element.

```js
const box = await elementHandle.boundingBox();
await page.mouse.click(box.x + box.width / 2, box.y + box.height / 2);
```

## elementHandle.check([options]) {#element-handle-check}
- `options` &#60;[Object]&#62;
  - `force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-check-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#element-handle-check-option-force" class="list-anchor">#</a>
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-check-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-check-option-no-wait-after" class="list-anchor">#</a>
  - `position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-check-option-position"/> &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#element-handle-check-option-position" class="list-anchor">#</a>
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-check-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-check-option-timeout" class="list-anchor">#</a>
  - `trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-check-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#element-handle-check-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-check-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-check-return" class="list-anchor">#</a>

This method checks the element by performing the following steps:
1. Ensure that element is a checkbox or a radio input. If not, this method throws. If the element is already checked, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now checked. If not, this method throws.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## elementHandle.click([options]) {#element-handle-click}
- `options` &#60;[Object]&#62;
  - `button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-click-option-button"/> &#60;"left"|"right"|"middle"&#62; Defaults to `left`.<a href="#element-handle-click-option-button" class="list-anchor">#</a>
  - `clickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-click-option-click-count"/> &#60;[number]&#62; defaults to 1. See [UIEvent.detail].<a href="#element-handle-click-option-click-count" class="list-anchor">#</a>
  - `delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-click-option-delay"/> &#60;[number]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#element-handle-click-option-delay" class="list-anchor">#</a>
  - `force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-click-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#element-handle-click-option-force" class="list-anchor">#</a>
  - `modifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-click-option-modifiers"/> &#60;[Array]<"Alt"|"Control"|"Meta"|"Shift">&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#element-handle-click-option-modifiers" class="list-anchor">#</a>
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-click-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-click-option-no-wait-after" class="list-anchor">#</a>
  - `position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-click-option-position"/> &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#element-handle-click-option-position" class="list-anchor">#</a>
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-click-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-click-option-timeout" class="list-anchor">#</a>
  - `trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-click-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#element-handle-click-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-click-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-click-return" class="list-anchor">#</a>

This method clicks the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## elementHandle.contentFrame() {#element-handle-content-frame}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-content-frame-return"/> &#60;[Promise]<[null]|[Frame]>&#62;<a href="#element-handle-content-frame-return" class="list-anchor">#</a>

Returns the content frame for element handles referencing iframe nodes, or `null` otherwise

## elementHandle.dblclick([options]) {#element-handle-dblclick}
- `options` &#60;[Object]&#62;
  - `button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dblclick-option-button"/> &#60;"left"|"right"|"middle"&#62; Defaults to `left`.<a href="#element-handle-dblclick-option-button" class="list-anchor">#</a>
  - `delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dblclick-option-delay"/> &#60;[number]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#element-handle-dblclick-option-delay" class="list-anchor">#</a>
  - `force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dblclick-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#element-handle-dblclick-option-force" class="list-anchor">#</a>
  - `modifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dblclick-option-modifiers"/> &#60;[Array]<"Alt"|"Control"|"Meta"|"Shift">&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#element-handle-dblclick-option-modifiers" class="list-anchor">#</a>
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dblclick-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-dblclick-option-no-wait-after" class="list-anchor">#</a>
  - `position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dblclick-option-position"/> &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#element-handle-dblclick-option-position" class="list-anchor">#</a>
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dblclick-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-dblclick-option-timeout" class="list-anchor">#</a>
  - `trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dblclick-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#element-handle-dblclick-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dblclick-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-dblclick-return" class="list-anchor">#</a>

This method double clicks the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to double click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set. Note that if the first click of the `dblclick()` triggers a navigation event, this method will throw.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

:::note
`elementHandle.dblclick()` dispatches two `click` events and a single `dblclick` event.
:::

## elementHandle.dispatchEvent(type[, eventInit]) {#element-handle-dispatch-event}
- `type`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dispatch-event-option-type"/> &#60;[string]&#62; DOM event type: `"click"`, `"dragstart"`, etc.<a href="#element-handle-dispatch-event-option-type" class="list-anchor">#</a>
- `eventInit`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dispatch-event-option-event-init"/> &#60;[EvaluationArgument]&#62; Optional event-specific initialization properties.<a href="#element-handle-dispatch-event-option-event-init" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-dispatch-event-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-dispatch-event-return" class="list-anchor">#</a>

The snippet below dispatches the `click` event on the element. Regardless of the visibility state of the element, `click` is dispatched. This is equivalent to calling [element.click()](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/click).

```js
await elementHandle.dispatchEvent('click');
```

Under the hood, it creates an instance of an event based on the given `type`, initializes it with `eventInit` properties and dispatches it on the element. Events are `composed`, `cancelable` and bubble by default.

Since `eventInit` is event-specific, please refer to the events documentation for the lists of initial properties:
* [DragEvent](https://developer.mozilla.org/en-US/docs/Web/API/DragEvent/DragEvent)
* [FocusEvent](https://developer.mozilla.org/en-US/docs/Web/API/FocusEvent/FocusEvent)
* [KeyboardEvent](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/KeyboardEvent)
* [MouseEvent](https://developer.mozilla.org/en-US/docs/Web/API/MouseEvent/MouseEvent)
* [PointerEvent](https://developer.mozilla.org/en-US/docs/Web/API/PointerEvent/PointerEvent)
* [TouchEvent](https://developer.mozilla.org/en-US/docs/Web/API/TouchEvent/TouchEvent)
* [Event](https://developer.mozilla.org/en-US/docs/Web/API/Event/Event)

You can also specify `JSHandle` as the property value if you want live objects to be passed into the event:

```js
// Note you can only create DataTransfer in Chromium and Firefox
const dataTransfer = await page.evaluateHandle(() => new DataTransfer());
await elementHandle.dispatchEvent('dragstart', { dataTransfer });
```

## elementHandle.fill(value[, options]) {#element-handle-fill}
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-fill-option-value"/> &#60;[string]&#62; Value to set for the `<input>`, `<textarea>` or `[contenteditable]` element.<a href="#element-handle-fill-option-value" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-fill-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#element-handle-fill-option-force" class="list-anchor">#</a>
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-fill-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-fill-option-no-wait-after" class="list-anchor">#</a>
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-fill-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-fill-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-fill-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-fill-return" class="list-anchor">#</a>

This method waits for [actionability](./actionability.mdx) checks, focuses the element, fills it and triggers an `input` event after filling. Note that you can pass an empty string to clear the input field.

If the target element is not an `<input>`, `<textarea>` or `[contenteditable]` element, this method throws an error. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), the control will be filled instead.

To send fine-grained keyboard events, use [elementHandle.type(text[, options])](./api/class-elementhandle.mdx#element-handle-type).

## elementHandle.focus() {#element-handle-focus}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-focus-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-focus-return" class="list-anchor">#</a>

Calls [focus](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/focus) on the element.

## elementHandle.getAttribute(name) {#element-handle-get-attribute}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-get-attribute-option-name"/> &#60;[string]&#62; Attribute name to get the value for.<a href="#element-handle-get-attribute-option-name" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-get-attribute-return"/> &#60;[Promise]<[null]|[string]>&#62;<a href="#element-handle-get-attribute-return" class="list-anchor">#</a>

Returns element attribute value.

## elementHandle.hover([options]) {#element-handle-hover}
- `options` &#60;[Object]&#62;
  - `force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-hover-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#element-handle-hover-option-force" class="list-anchor">#</a>
  - `modifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-hover-option-modifiers"/> &#60;[Array]<"Alt"|"Control"|"Meta"|"Shift">&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#element-handle-hover-option-modifiers" class="list-anchor">#</a>
  - `position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-hover-option-position"/> &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#element-handle-hover-option-position" class="list-anchor">#</a>
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-hover-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-hover-option-timeout" class="list-anchor">#</a>
  - `trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-hover-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#element-handle-hover-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-hover-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-hover-return" class="list-anchor">#</a>

This method hovers over the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to hover over the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## elementHandle.innerHTML() {#element-handle-inner-html}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-inner-html-return"/> &#60;[Promise]<[string]>&#62;<a href="#element-handle-inner-html-return" class="list-anchor">#</a>

Returns the `element.innerHTML`.

## elementHandle.innerText() {#element-handle-inner-text}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-inner-text-return"/> &#60;[Promise]<[string]>&#62;<a href="#element-handle-inner-text-return" class="list-anchor">#</a>

Returns the `element.innerText`.

## elementHandle.inputValue([options]) {#element-handle-input-value}
- `options` &#60;[Object]&#62;
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-input-value-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-input-value-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-input-value-return"/> &#60;[Promise]<[string]>&#62;<a href="#element-handle-input-value-return" class="list-anchor">#</a>

Returns `input.value` for `<input>` or `<textarea>` or `<select>` element. Throws for non-input elements.

## elementHandle.isChecked() {#element-handle-is-checked}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-is-checked-return"/> &#60;[Promise]<[boolean]>&#62;<a href="#element-handle-is-checked-return" class="list-anchor">#</a>

Returns whether the element is checked. Throws if the element is not a checkbox or radio input.

## elementHandle.isDisabled() {#element-handle-is-disabled}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-is-disabled-return"/> &#60;[Promise]<[boolean]>&#62;<a href="#element-handle-is-disabled-return" class="list-anchor">#</a>

Returns whether the element is disabled, the opposite of [enabled](./actionability.mdx#enabled).

## elementHandle.isEditable() {#element-handle-is-editable}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-is-editable-return"/> &#60;[Promise]<[boolean]>&#62;<a href="#element-handle-is-editable-return" class="list-anchor">#</a>

Returns whether the element is [editable](./actionability.mdx#editable).

## elementHandle.isEnabled() {#element-handle-is-enabled}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-is-enabled-return"/> &#60;[Promise]<[boolean]>&#62;<a href="#element-handle-is-enabled-return" class="list-anchor">#</a>

Returns whether the element is [enabled](./actionability.mdx#enabled).

## elementHandle.isHidden() {#element-handle-is-hidden}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-is-hidden-return"/> &#60;[Promise]<[boolean]>&#62;<a href="#element-handle-is-hidden-return" class="list-anchor">#</a>

Returns whether the element is hidden, the opposite of [visible](./actionability.mdx#visible).

## elementHandle.isVisible() {#element-handle-is-visible}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-is-visible-return"/> &#60;[Promise]<[boolean]>&#62;<a href="#element-handle-is-visible-return" class="list-anchor">#</a>

Returns whether the element is [visible](./actionability.mdx#visible).

## elementHandle.ownerFrame() {#element-handle-owner-frame}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-owner-frame-return"/> &#60;[Promise]<[null]|[Frame]>&#62;<a href="#element-handle-owner-frame-return" class="list-anchor">#</a>

Returns the frame containing the given element.

## elementHandle.press(key[, options]) {#element-handle-press}
- `key`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-press-option-key"/> &#60;[string]&#62; Name of the key to press or a character to generate, such as `ArrowLeft` or `a`.<a href="#element-handle-press-option-key" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-press-option-delay"/> &#60;[number]&#62; Time to wait between `keydown` and `keyup` in milliseconds. Defaults to 0.<a href="#element-handle-press-option-delay" class="list-anchor">#</a>
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-press-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-press-option-no-wait-after" class="list-anchor">#</a>
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-press-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-press-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-press-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-press-return" class="list-anchor">#</a>

Focuses the element, and then uses [keyboard.down(key)](./api/class-keyboard.mdx#keyboard-down) and [keyboard.up(key)](./api/class-keyboard.mdx#keyboard-up).

`key` can specify the intended [keyboardEvent.key](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key) value or a single character to generate the text for. A superset of the `key` values can be found [here](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key/Key_Values). Examples of the keys are:

`F1` - `F12`, `Digit0`- `Digit9`, `KeyA`- `KeyZ`, `Backquote`, `Minus`, `Equal`, `Backslash`, `Backspace`, `Tab`, `Delete`, `Escape`, `ArrowDown`, `End`, `Enter`, `Home`, `Insert`, `PageDown`, `PageUp`, `ArrowRight`, `ArrowUp`, etc.

Following modification shortcuts are also supported: `Shift`, `Control`, `Alt`, `Meta`, `ShiftLeft`.

Holding down `Shift` will type the text that corresponds to the `key` in the upper case.

If `key` is a single character, it is case-sensitive, so the values `a` and `A` will generate different respective texts.

Shortcuts such as `key: "Control+o"` or `key: "Control+Shift+T"` are supported as well. When specified with the modifier, modifier is pressed and being held while the subsequent key is being pressed.

## elementHandle.screenshot([options]) {#element-handle-screenshot}
- `options` &#60;[Object]&#62;
  - `animations`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-screenshot-option-animations"/> &#60;"disabled"&#62; When set to `"disabled"`, stops CSS animations, CSS transitions and Web Animations. Animations get different treatment depending on their duration:<a href="#element-handle-screenshot-option-animations" class="list-anchor">#</a>
    * finite animations are fast-forwarded to completion, so they'll fire `transitionend` event.
    * infinite animations are canceled to initial state, and then played over after the screenshot.
  - `mask`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-screenshot-option-mask"/> &#60;[Array]<[Locator]>&#62; Specify locators that should be masked when the screenshot is taken. Masked elements will be overlayed with a pink box `#FF00FF` that completely covers its bounding box.<a href="#element-handle-screenshot-option-mask" class="list-anchor">#</a>
  - `omitBackground`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-screenshot-option-omit-background"/> &#60;[boolean]&#62; Hides default white background and allows capturing screenshots with transparency. Not applicable to `jpeg` images. Defaults to `false`.<a href="#element-handle-screenshot-option-omit-background" class="list-anchor">#</a>
  - `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-screenshot-option-path"/> &#60;[string]&#62; The file path to save the image to. The screenshot type will be inferred from file extension. If `path` is a relative path, then it is resolved relative to the current working directory. If no path is provided, the image won't be saved to the disk.<a href="#element-handle-screenshot-option-path" class="list-anchor">#</a>
  - `quality`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-screenshot-option-quality"/> &#60;[number]&#62; The quality of the image, between 0-100. Not applicable to `png` images.<a href="#element-handle-screenshot-option-quality" class="list-anchor">#</a>
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-screenshot-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-screenshot-option-timeout" class="list-anchor">#</a>
  - `type`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-screenshot-option-type"/> &#60;"png"|"jpeg"&#62; Specify screenshot type, defaults to `png`.<a href="#element-handle-screenshot-option-type" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-screenshot-return"/> &#60;[Promise]<[Buffer]>&#62;<a href="#element-handle-screenshot-return" class="list-anchor">#</a>

Returns the buffer with the captured screenshot.

This method waits for the [actionability](./actionability.mdx) checks, then scrolls element into view before taking a screenshot. If the element is detached from DOM, the method throws an error.

## elementHandle.scrollIntoViewIfNeeded([options]) {#element-handle-scroll-into-view-if-needed}
- `options` &#60;[Object]&#62;
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-scroll-into-view-if-needed-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-scroll-into-view-if-needed-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-scroll-into-view-if-needed-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-scroll-into-view-if-needed-return" class="list-anchor">#</a>

This method waits for [actionability](./actionability.mdx) checks, then tries to scroll element into view, unless it is completely visible as defined by [IntersectionObserver](https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API)'s `ratio`.

Throws when `elementHandle` does not point to an element [connected](https://developer.mozilla.org/en-US/docs/Web/API/Node/isConnected) to a Document or a ShadowRoot.

## elementHandle.selectOption(values[, options]) {#element-handle-select-option}
- `values`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-select-option-option-values"/> &#60;[null]|[string]|[ElementHandle]|[Array]<[string]>|[Object]|[Array]<[ElementHandle]>|[Array]<[Object]>&#62; Options to select. If the `<select>` has the `multiple` attribute, all matching options are selected, otherwise only the first option matching one of the passed options is selected. String values are equivalent to `{value:'string'}`. Option is considered matching if all specified properties match.<a href="#element-handle-select-option-option-values" class="list-anchor">#</a>
  - `value` &#60;[string]&#62; Matches by `option.value`. Optional.
  - `label` &#60;[string]&#62; Matches by `option.label`. Optional.
  - `index` &#60;[number]&#62; Matches by the index. Optional.
- `options` &#60;[Object]&#62;
  - `force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-select-option-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#element-handle-select-option-option-force" class="list-anchor">#</a>
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-select-option-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-select-option-option-no-wait-after" class="list-anchor">#</a>
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-select-option-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-select-option-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-select-option-return"/> &#60;[Promise]<[Array]<[string]>>&#62;<a href="#element-handle-select-option-return" class="list-anchor">#</a>

This method waits for [actionability](./actionability.mdx) checks, waits until all specified options are present in the `<select>` element and selects these options.

If the target element is not a `<select>` element, this method throws an error. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), the control will be used instead.

Returns the array of option values that have been successfully selected.

Triggers a `change` and `input` event once all the provided options have been selected.

```js
// single selection matching the value
handle.selectOption('blue');

// single selection matching the label
handle.selectOption({ label: 'Blue' });

// multiple selection
handle.selectOption(['red', 'green', 'blue']);
```

## elementHandle.selectText([options]) {#element-handle-select-text}
- `options` &#60;[Object]&#62;
  - `force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-select-text-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#element-handle-select-text-option-force" class="list-anchor">#</a>
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-select-text-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-select-text-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-select-text-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-select-text-return" class="list-anchor">#</a>

This method waits for [actionability](./actionability.mdx) checks, then focuses the element and selects all its text content.

## elementHandle.setChecked(checked[, options]) {#element-handle-set-checked}
- `checked`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-checked-option-checked"/> &#60;[boolean]&#62; Whether to check or uncheck the checkbox.<a href="#element-handle-set-checked-option-checked" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-checked-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#element-handle-set-checked-option-force" class="list-anchor">#</a>
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-checked-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-set-checked-option-no-wait-after" class="list-anchor">#</a>
  - `position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-checked-option-position"/> &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#element-handle-set-checked-option-position" class="list-anchor">#</a>
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-checked-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-set-checked-option-timeout" class="list-anchor">#</a>
  - `trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-checked-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#element-handle-set-checked-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-checked-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-set-checked-return" class="list-anchor">#</a>

This method checks or unchecks an element by performing the following steps:
1. Ensure that element is a checkbox or a radio input. If not, this method throws.
1. If the element already has the right checked state, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now checked or unchecked. If not, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## elementHandle.setInputFiles(files[, options]) {#element-handle-set-input-files}
- `files`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-input-files-option-files"/> &#60;[string]|[Array]<[string]>|[Object]|[Array]<[Object]>&#62;<a href="#element-handle-set-input-files-option-files" class="list-anchor">#</a>
  - `name` &#60;[string]&#62; File name
  - `mimeType` &#60;[string]&#62; File type
  - `buffer` &#60;[Buffer]&#62; File content
- `options` &#60;[Object]&#62;
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-input-files-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-set-input-files-option-no-wait-after" class="list-anchor">#</a>
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-input-files-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-set-input-files-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-set-input-files-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-set-input-files-return" class="list-anchor">#</a>

This method expects `elementHandle` to point to an [input element](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input).

Sets the value of the file input to these file paths or files. If some of the `filePaths` are relative paths, then they are resolved relative to the the current working directory. For empty array, clears the selected files.

## elementHandle.tap([options]) {#element-handle-tap}
- `options` &#60;[Object]&#62;
  - `force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-tap-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#element-handle-tap-option-force" class="list-anchor">#</a>
  - `modifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-tap-option-modifiers"/> &#60;[Array]<"Alt"|"Control"|"Meta"|"Shift">&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#element-handle-tap-option-modifiers" class="list-anchor">#</a>
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-tap-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-tap-option-no-wait-after" class="list-anchor">#</a>
  - `position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-tap-option-position"/> &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#element-handle-tap-option-position" class="list-anchor">#</a>
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-tap-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-tap-option-timeout" class="list-anchor">#</a>
  - `trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-tap-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#element-handle-tap-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-tap-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-tap-return" class="list-anchor">#</a>

This method taps the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [page.touchscreen](./api/class-page.mdx#page-touchscreen) to tap the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

:::note
`elementHandle.tap()` requires that the `hasTouch` option of the browser context be set to true.
:::

## elementHandle.textContent() {#element-handle-text-content}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-text-content-return"/> &#60;[Promise]<[null]|[string]>&#62;<a href="#element-handle-text-content-return" class="list-anchor">#</a>

Returns the `node.textContent`.

## elementHandle.type(text[, options]) {#element-handle-type}
- `text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-type-option-text"/> &#60;[string]&#62; A text to type into a focused element.<a href="#element-handle-type-option-text" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-type-option-delay"/> &#60;[number]&#62; Time to wait between key presses in milliseconds. Defaults to 0.<a href="#element-handle-type-option-delay" class="list-anchor">#</a>
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-type-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-type-option-no-wait-after" class="list-anchor">#</a>
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-type-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-type-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-type-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-type-return" class="list-anchor">#</a>

Focuses the element, and then sends a `keydown`, `keypress`/`input`, and `keyup` event for each character in the text.

To press a special key, like `Control` or `ArrowDown`, use [elementHandle.press(key[, options])](./api/class-elementhandle.mdx#element-handle-press).

```js
await elementHandle.type('Hello'); // Types instantly
await elementHandle.type('World', {delay: 100}); // Types slower, like a user
```

An example of typing into a text field and then submitting the form:

```js
const elementHandle = await page.$('input');
await elementHandle.type('some text');
await elementHandle.press('Enter');
```

## elementHandle.uncheck([options]) {#element-handle-uncheck}
- `options` &#60;[Object]&#62;
  - `force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-uncheck-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#element-handle-uncheck-option-force" class="list-anchor">#</a>
  - `noWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-uncheck-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#element-handle-uncheck-option-no-wait-after" class="list-anchor">#</a>
  - `position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-uncheck-option-position"/> &#60;[Object]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#element-handle-uncheck-option-position" class="list-anchor">#</a>
    - `x` &#60;[number]&#62;
    - `y` &#60;[number]&#62;
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-uncheck-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-uncheck-option-timeout" class="list-anchor">#</a>
  - `trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-uncheck-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#element-handle-uncheck-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-uncheck-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-uncheck-return" class="list-anchor">#</a>

This method checks the element by performing the following steps:
1. Ensure that element is a checkbox or a radio input. If not, this method throws. If the element is already unchecked, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now unchecked. If not, this method throws.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## elementHandle.waitForElementState(state[, options]) {#element-handle-wait-for-element-state}
- `state`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-wait-for-element-state-option-state"/> &#60;"visible"|"hidden"|"stable"|"enabled"|"disabled"|"editable"&#62; A state to wait for, see below for more details.<a href="#element-handle-wait-for-element-state-option-state" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-wait-for-element-state-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-wait-for-element-state-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-wait-for-element-state-return"/> &#60;[Promise]<[void]>&#62;<a href="#element-handle-wait-for-element-state-return" class="list-anchor">#</a>

Returns when the element satisfies the `state`.

Depending on the `state` parameter, this method waits for one of the [actionability](./actionability.mdx) checks to pass. This method throws when the element is detached while waiting, unless waiting for the `"hidden"` state.
* `"visible"` Wait until the element is [visible](./actionability.mdx#visible).
* `"hidden"` Wait until the element is [not visible](./actionability.mdx#visible) or [not attached](./actionability.mdx#attached). Note that waiting for hidden does not throw when the element detaches.
* `"stable"` Wait until the element is both [visible](./actionability.mdx#visible) and [stable](./actionability.mdx#stable).
* `"enabled"` Wait until the element is [enabled](./actionability.mdx#enabled).
* `"disabled"` Wait until the element is [not enabled](./actionability.mdx#enabled).
* `"editable"` Wait until the element is [editable](./actionability.mdx#editable).

If the element does not satisfy the condition for the `timeout` milliseconds, this method will throw.

## elementHandle.waitForSelector(selector[, options]) {#element-handle-wait-for-selector}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-wait-for-selector-option-selector"/> &#60;[string]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.<a href="#element-handle-wait-for-selector-option-selector" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `state`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-wait-for-selector-option-state"/> &#60;"attached"|"detached"|"visible"|"hidden"&#62; Defaults to `'visible'`. Can be either:<a href="#element-handle-wait-for-selector-option-state" class="list-anchor">#</a>
    * `'attached'` - wait for element to be present in DOM.
    * `'detached'` - wait for element to not be present in DOM.
    * `'visible'` - wait for element to have non-empty bounding box and no `visibility:hidden`. Note that element without any content or with `display:none` has an empty bounding box and is not considered visible.
    * `'hidden'` - wait for element to be either detached from DOM, or have an empty bounding box or `visibility:hidden`. This is opposite to the `'visible'` option.
  - `strict`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-wait-for-selector-option-strict"/> &#60;[boolean]&#62; When true, the call requires selector to resolve to a single element. If given selector resolves to more then one element, the call throws an exception.<a href="#element-handle-wait-for-selector-option-strict" class="list-anchor">#</a>
  - `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-wait-for-selector-option-timeout"/> &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#element-handle-wait-for-selector-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="element-handle-wait-for-selector-return"/> &#60;[Promise]<[null]|[ElementHandle]>&#62;<a href="#element-handle-wait-for-selector-return" class="list-anchor">#</a>

Returns element specified by selector when it satisfies `state` option. Returns `null` if waiting for `hidden` or `detached`.

Wait for the `selector` relative to the element handle to satisfy `state` option (either appear/disappear from dom, or become visible/hidden). If at the moment of calling the method `selector` already satisfies the condition, the method will return immediately. If the selector doesn't satisfy the condition for the `timeout` milliseconds, the function will throw.

```js
await page.setContent(`<div><span></span></div>`);
const div = await page.$('div');
// Waiting for the 'span' selector relative to the div.
const span = await div.waitForSelector('span', { state: 'attached' });
```

:::note
This method does not work across navigations, use [page.waitForSelector(selector[, options])](./api/class-page.mdx#page-wait-for-selector) instead.
:::


[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[ScreenshotAssertions]: ./test-assertions.mdx "ScreenshotAssertions"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
